<resources>
    <string name="app_name">AppLecturer</string>
    <string name="day">Day</string>
    <string name="end">End</string>
    <string name="add_course">Add Course</string>
    <string name="name">Name</string>
    <string name="course_name">Course Name</string>
    <string name="time">Time</string>
    <string name="start">Start</string>

    <string-array name="day">
        <item> Monday </item>
        <item> Tuesday </item>
        <item> Wednesday </item>
        <item> Thursday </item>
        <item> Friday </item>
        <item> Saturday </item>
        <item> Sunday </item>
    </string-array>

    <string-array name="lecturer">

    </string-array>

    <string-array name="start">
        <item> 07.30 </item>
        <item> 08.00 </item>
        <item> 08.30 </item>
        <item> 09.00 </item>
        <item> 09.30 </item>
        <item> 10.00 </item>
        <item> 10.30 </item>
        <item> 11.00 </item>
        <item> 11/30 </item>
        <item> 12.00 </item>
        <item> 12.30 </item>
        <item> 13.00 </item>
        <item> 13.30 </item>
        <item> 14.00 </item>
        <item> 14.30 </item>
        <item> 15.00 </item>
        <item> 15.30 </item>
        <item> 16.00 </item>
        <item> 16.30 </item>
        <item> 17.00 </item>
    </string-array>

    <string-array name="end">
        <item> 07.30 </item>
        <item> 08.00 </item>
        <item> 08.30 </item>
        <item> 09.00 </item>
        <item> 09.30 </item>
        <item> 10.00 </item>
        <item> 10.30 </item>
        <item> 11.00 </item>
        <item> 11/30 </item>
        <item> 12.00 </item>
        <item> 12.30 </item>
        <item> 13.00 </item>
        <item> 13.30 </item>
        <item> 14.00 </item>
        <item> 14.30 </item>
        <item> 15.00 </item>
        <item> 15.30 </item>
        <item> 16.00 </item>
        <item> 16.30 </item>
        <item> 17.00 </item>
    </string-array>

</resources>
